--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 		  "unlimitedStorage"
         ],
 	"background": {
-		"persistent":true,
-		"scripts": ["jquery-3.1.0.min.js","wikiParser.js","boot.js","shanghay.js"]
+		"persistent":false,
+		"scripts": ["wikiParser.js","boot.js"]
   }
 }
