--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,29 +1,19 @@
-extends:
-  airbnb-base
-
 env:
   browser: true
-  es6: true
-
+  es2021: true
+  webextensions: true
+globals:
+  RequestCredentials: readonly
+extends:
+  - airbnb-base
+  - plugin:import/typescript
+parser: '@typescript-eslint/parser'
+parserOptions:
+  ecmaVersion: 12
+  sourceType: module
+plugins:
+  - '@typescript-eslint'
 rules:
-  max-len: [error, 120]
-  linebreak-style: off
-  no-underscore-dangle: off
-  comma-dangle: [error, always-multiline]
-  quotes: [error, single]
-  no-plusplus: off
-  object-curly-spacing: [error, never]
-  object-curly-newline: off
-  no-param-reassign: off
-  no-await-in-loop: off
-  no-empty: [error, allowEmptyCatch: true]
-  import/prefer-default-export: off
-  no-nested-ternary: off
-  eslintno-underscore-dangle: off
-
-settings:
-  import/resolver:
-    node:
-      moduleDirectory:
-        - node_modules
-        - src
+  camelcase: 0
+  import/extensions:
+      ['error', 'ignorePackages', {'js': 'never', 'jsx': 'never', 'ts': 'never', 'tsx': 'never'}]
