--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "boot.js",
   "scripts": {
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "start": "ts-node-esm bot/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,18 @@
   },
   "homepage": "https://github.com/EladHeller/tradeBoot#readme",
   "devDependencies": {
+    "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint-plugin-import": "^2.25.2",
+    "ts-node": "^10.7.0"
   },
   "dependencies": {
-    "node-fetch": "^3.2.4"
+    "axios": "^0.27.2",
+    "axios-cookiejar-support": "^3.0.0",
+    "dotenv": "^16.0.0",
+    "tough-cookie": "^4.0.0"
   }
 }
