--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "tradeboot",
   "version": "1.0.0",
   "description": "tradeBoot",
-  "main": "boot.js",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
+    "build": "rm -rf dist && tsc",
+    "zip": "rm -f dist.zip && zip -r9 dist.zip ./dist",
     "start": "ts-node-esm bot/index.ts",
-    "bot": "ts-node-esm bot/newBot.ts"
+    "bot": "ts-node-esm bot/newBot.ts",
+    "upload-lambda": "ts-node-esm upload-lambda.ts"
   },
   "repository": {
     "type": "git",
@@ -19,7 +22,15 @@
     "url": "https://github.com/EladHeller/tradeBoot/issues"
   },
   "homepage": "https://github.com/EladHeller/tradeBoot#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "axios-cookiejar-support": "^3.0.0",
+    "dotenv": "^16.0.0",
+    "tough-cookie": "^4.0.0"
+  },
   "devDependencies": {
+    "@types/node": "^17.0.35",
+    "aws-sdk": "^2.1141.0",
     "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -27,11 +38,5 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
     "ts-node": "^10.7.0"
-  },
-  "dependencies": {
-    "axios": "^0.27.2",
-    "axios-cookiejar-support": "^3.0.0",
-    "dotenv": "^16.0.0",
-    "tough-cookie": "^4.0.0"
   }
 }
