update-lambda: update lambda via S3.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "sh ./build/deploy.sh",
     "start": "ts-node-esm bot/index.ts",
     "bot": "ts-node-esm bot/newBot.ts",
-    "upload-lambda": "ts-node-esm ./build/upload-lambda.ts",
+    "update-lambda": "ts-node-esm ./build/update-lambda.ts",
     "create-env": "ts-node-esm ./build/create-env.ts",
     "test:ci": "npm run type-check && npm test && npm run lint:test"
   },
