--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: npm i
 
-      - name: Configure AWS Credentials (legacy cdn)
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -38,4 +38,4 @@ jobs:
           export CODE_BUCKET=${{ secrets.CODE_BUCKET_NAME }}
           export USER_NAME=${{ secrets.WIKI_USER_NAME }}
           export PASSWORD=${{ secrets.WIKI_USER_PASSWORD }}
-          npm run update-lambda
+          npm run deploy
