--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,7 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 12
   sourceType: module
+  project: './tsconfig.eslint.json'
 plugins:
   - '@typescript-eslint'
 rules:
