--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "ts-node-esm bot/index.ts",
     "bot": "ts-node-esm bot/newBot.ts",
     "identity": "ts-node-esm bot/mayaIdentityIndex.ts",
+    "us-stocks": "ts-node-esm bot/usStocksBot.ts",
     "update-lambda": "ts-node-esm ./build/update-lambda.ts",
     "update-s3": "ts-node-esm ./build/update-s3.ts",
     "update-env": "ts-node-esm ./build/update-env.ts",
@@ -31,12 +32,14 @@
     "axios": "^1.2.2",
     "axios-cookiejar-support": "^4.0.6",
     "dotenv": "^16.0.3",
+    "jsdom": "^21.1.0",
     "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.5",
+    "@types/jsdom": "^21.1.0",
     "@types/node": "^18.11.18",
     "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
