--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "update-lambda": "ts-node-esm ./build/update-lambda.ts",
     "update-s3": "ts-node-esm ./build/update-s3.ts",
     "update-env": "ts-node-esm ./build/update-env.ts",
-    "test:ci": "npm run type-check && npm test && npm run lint:test"
+    "test:ci": "npm run type-check && npm test && npm run lint:test",
+    "kineret": "ts-node-esm bot/kineret/kineretBot.ts"
   },
   "repository": {
     "type": "git",
