script: stamp paper template.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "rm -rf dist && tsc",
     "deploy": "sh ./build/deploy.sh",
     "yearly-report": "ts-node-esm bot/yearly-report/index.ts",
+    "stamp": "ts-node-esm bot/scripts/stamp.ts",
     "bot": "ts-node-esm bot/newBot.ts",
     "identity": "ts-node-esm bot/mayaIdentityIndex.ts",
     "us-stocks": "ts-node-esm bot/usStocksBot.ts",
