--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "kineret": "ts-node-esm bot/kineret/kineretBot.ts",
     "replace": "ts-node-esm bot/scripts/replace.ts",
     "kipa": "ts-node-esm bot/scripts/kipa.ts",
+    "delete-redirects": "ts-node-esm bot/admin/deleteRedirects.ts",
     "protect": "ts-node-esm bot/protect/index.ts"
   },
   "repository": {
