--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
         "strictNullChecks": true,
         "outDir": "dist"
     },
-    "include": [
-        "bot"
-    ],
+    "include": ["bot", "bot/admin"],
     "exclude": [
         "node_modules"
     ]
