--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "dotenv": "^16.0.3",
     "jsdom": "^21.1.1",
     "playwright": "^1.32.3",
-    "readline": "^1.3.0",
+    "playwright-aws-lambda": "^0.10.0",
+    "playwright-core": "^1.32.3",
     "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
