protect: protect origin values.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "replace": "ts-node-esm bot/scripts/replace.ts",
     "kipa": "ts-node-esm bot/scripts/kipa.ts",
     "rollback": "ts-node-esm bot/scripts/rollback.ts",
-    "delete-redirects": "ts-node-esm bot/admin/deleteRedirects.ts"
+    "delete-redirects": "ts-node-esm bot/admin/deleteRedirects.ts",
+    "protect": "ts-node-esm bot/admin/protect.ts"
   },
   "repository": {
     "type": "git",
