--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudformation": "^3.321.1",
+    "@aws-sdk/client-lambda": "^3.321.1",
     "@aws-sdk/client-s3": "^3.321.1",
     "@aws-sdk/client-ses": "^3.321.1",
     "@babel/preset-env": "^7.20.2",
