--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.4.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zx": "^7.2.1"
   }
 }
