--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "test": "jest",
     "build": "rm -rf dist && tsc",
     "deploy": "sh ./build/deploy.sh",
-    "yearly-report": "ts-node-esm bot/yearly-report/index.ts",
-    "stamp": "ts-node-esm bot/scripts/stamp.ts",
-    "bot": "ts-node-esm bot/newBot.ts",
-    "identity": "ts-node-esm bot/mayaIdentityIndex.ts",
-    "us-stocks": "ts-node-esm bot/usStocksBot.ts",
-    "us-stocks-articles": "ts-node-esm bot/scripts/usStocksBotUpdateArticles.ts",
-    "stocks-articles": "ts-node-esm bot/scripts/stocksBotArticle.ts",
-    "company-details": "ts-node-esm bot/companyDetailsBot.ts",
-    "update-lambda": "ts-node-esm ./build/update-lambda.ts",
-    "update-s3": "ts-node-esm ./build/update-s3.ts",
-    "update-env": "ts-node-esm ./build/update-env.ts",
+    "yearly-report": "tsx bot/yearly-report/index.ts",
+    "stamp": "tsx bot/scripts/stamp.ts",
+    "bot": "tsx bot/newBot.ts",
+    "identity": "tsx bot/mayaIdentityIndex.ts",
+    "us-stocks": "tsx bot/usStocksBot.ts",
+    "us-stocks-articles": "tsx bot/scripts/usStocksBotUpdateArticles.ts",
+    "stocks-articles": "tsx bot/scripts/stocksBotArticle.ts",
+    "company-details": "tsx bot/companyDetailsBot.ts",
+    "update-lambda": "tsx ./build/update-lambda.ts",
+    "update-s3": "tsx ./build/update-s3.ts",
+    "update-env": "tsx ./build/update-env.ts",
     "test:ci": "npm run type-check && npm test && npm run lint:test",
-    "kineret": "ts-node-esm bot/kineret/kineretBot.ts",
-    "replace": "ts-node-esm bot/scripts/replace.ts",
-    "kipa": "ts-node-esm bot/scripts/kipa.ts",
-    "rollback": "ts-node-esm bot/scripts/rollback.ts",
-    "delete-redirects": "ts-node-esm bot/admin/runDelete.ts",
-    "protect": "ts-node-esm bot/admin/runProtect.ts",
-    "patrol": "ts-node-esm bot/patrolBot.ts",
-    "yadVashem": "ts-node-esm bot/scripts/yadVashem.ts"
+    "kineret": "tsx bot/kineret/kineretBot.ts",
+    "replace": "tsx bot/scripts/replace.ts",
+    "kipa": "tsx bot/scripts/kipa.ts",
+    "rollback": "tsx bot/scripts/rollback.ts",
+    "delete-redirects": "tsx bot/admin/runDelete.ts",
+    "protect": "tsx bot/admin/runProtect.ts",
+    "patrol": "tsx bot/patrolBot.ts",
+    "yadVashem": "tsx bot/scripts/yadVashem.ts"
   },
   "repository": {
     "type": "git",
@@ -68,7 +68,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.4.3",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.6",
     "zx": "^7.2.1"
   }
 }
