--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,8 @@ jobs:
           export CODE_BUCKET=${{ secrets.CODE_BUCKET_NAME }}
           export USER_NAME=${{ secrets.WIKI_USER_NAME }}
           export PASSWORD=${{ secrets.WIKI_USER_PASSWORD }}
-          export BASE_USER_NAME=${{ secrets.WIKI_BASE_USER_NAME }}
-          export BASE_PASSWORD=${{ secrets.WIKI_BASE_USER_PASSWORD }}
+          export PROTECT_USER_NAME=${{ secrets.WIKI_PROTECT_USER_NAME }}
+          export PROTECT_PASSWORD=${{ secrets.WIKI_PROTECT_USER_PASSWORD }}
           export DELETE_USER_NAME=${{ secrets.WIKI_DELETE_USER_NAME }}
           export DELETE_PASSWORD=${{ secrets.WIKI_DELETE_USER_PASSWORD }}
 
