--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,5 +21,7 @@ rules:
   no-console: off
   no-await-in-loop: off
   no-restricted-syntax: off
+  no-unused-vars: off
+  "@typescript-eslint/no-unused-vars": [error]
   import/extensions:
       ['error', 'ignorePackages', {'js': 'never', 'jsx': 'never', 'ts': 'never', 'tsx': 'never'}]
