--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios-cookiejar-support": "^4.0.6",
     "dotenv": "^16.0.3",
     "jsdom": "^21.1.1",
+    "openai": "^3.2.1",
     "playwright": "^1.32.3",
     "tough-cookie": "^4.1.2"
   },
