--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "dotenv": "^16.0.3",
     "jsdom": "^21.1.1",
     "openai": "^3.2.1",
-    "tough-cookie": "^4.1.3",
-    "playwright": "^1.35.1"
+    "playwright": "^1.35.1",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "@aws-sdk/client-cloudformation": "^3.380.0",
@@ -57,6 +57,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "tsx": "^3.12.7",
+    "typescript": "^5.1.6",
     "zx": "^7.2.2"
   }
 }
