--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "CommonJS",
+        "target": "ES2022",
+        "module": "NodeNext",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
         "outDir": "dist"
     },
-    "include": ["bot"],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["bot"]
 }
