unit test coverage.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint:test": "eslint ./**/*.ts ./send-email/**/*.mjs --max-warnings 0",
     "type-check": "tsc --noEmit",
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "rm -rf dist && tsc",
     "update-env": "tsx ./build/update-env.ts",
     "test:ci": "npm run type-check && npm test && npm run lint:test",
