fix lint xmlbot.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,7 +28,11 @@ jobs:
             ${{ runner.os }}-build-
 
       - name: Install modules
-        run: npm ci
+        run: |
+          npm ci
+          cd xmlbot
+          npm ci
+          cd ..
 
       - name: Type check
         run: npm run type-check
