--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,7 @@ rules:
   no-await-in-loop: off
   no-restricted-syntax: off
   no-unused-vars: off
+  max-len: [error, { code: 120, ignoreStrings: true, ignoreTemplateLiterals: true, ignoreComments: true }]
   "@typescript-eslint/no-unused-vars": [error]
   import/extensions:
       ['error', 'ignorePackages', {'js': 'never', 'jsx': 'never', 'ts': 'never', 'tsx': 'never'}]
