--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,8 +5,7 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
-        "outDir": "dist",
-        "sourceMap": true
+        "outDir": "dist"
     },
     "include": ["bot"]
 }
