transform to module.

--- a/jest.config.json
+++ b/jest.config.json
@@ -14,5 +14,11 @@
     },
     "testPathIgnorePatterns": [
       "dist/"
-    ]
+    ],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "moduleFileExtensions": ["ts", "js", "json", "node"]
+  
   }
