--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "NodeNext",
+        "target": "ESNext",
+        "module": "ESNext",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
+        "moduleResolution": "node",
         "outDir": "dist"
     },
     "include": ["bot"]
