--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "CommonJS",
+        "target": "ESNext",
+        "module": "ESNext",
+        "moduleResolution": "node",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
