Revert "Merge pull request #527 from EladHeller/develop"
This reverts commit fc80f0eca5eb9b77835b2059acb42223c67f104c, reversing
changes made to f4e5ea908638467cb1df86a271f470a7e2f635ca.

--- a/package.json
+++ b/package.json
@@ -55,5 +55,20 @@
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "zx": "^7.2.3"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "BaseWikiApi.ts",
+      "NewWikiApi.ts",
+      "wikiLogin.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
