Revert "Merge pull request #529 from EladHeller/develop"
This reverts commit 1db0fc2debfe86741a500ab1f93641dfa623117e, reversing
changes made to 9dc50f1c775c9f1bb1f65b22478b0de708417662.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,11 +1,10 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
+        "target": "ES2022",
+        "module": "NodeNext",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
-        "moduleResolution": "node",
         "outDir": "dist"
     },
     "include": ["bot"]
