--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "node",
+        "target": "ES2022",
+        "module": "NodeNext",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
