--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,5 +8,6 @@
         "moduleResolution": "node",
         "outDir": "dist"
     },
-    "include": ["bot"]
+    "include": ["bot"],
+    "exclude": ["bot/__tests__"]
 }
