--- a/jest.config.json
+++ b/jest.config.json
@@ -1,24 +1,28 @@
 {
-    "coveragePathIgnorePatterns": [
-      "BaseWikiApi.ts",
-      "NewWikiApi.ts",
-      "wikiLogin.ts"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    },
-    "testPathIgnorePatterns": [
-      "dist/"
-    ],
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "moduleFileExtensions": ["ts", "js", "json", "node"]
-  
-  }
+	"coveragePathIgnorePatterns": [
+		"BaseWikiApi.ts",
+		"NewWikiApi.ts",
+		"wikiLogin.ts"
+	],
+	"coverageThreshold": {
+		"global": {
+			"branches": 100,
+			"functions": 100,
+			"lines": 100,
+			"statements": 100
+		}
+	},
+	"testPathIgnorePatterns": [
+		"dist/"
+	],
+	"testEnvironment": "node",
+	"transform": {
+		"^.+\\.ts$": "ts-jest"
+	},
+	"moduleFileExtensions": [
+		"ts",
+		"js",
+		"json",
+		"node"
+	]
+}
