avoid typescript-eslint update issues.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,8 @@ updates:
       - eladheller
     reviewers:
       - eladheller
+    groups:
+      typescript-eslint:
+        applies-to: version-updates
+        patterns:
+          - "*typescript-eslint*"
