nrgTemplate: convert links to templates.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,7 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
+        "resolveJsonModule": true,
         "outDir": "dist"
     },
     "include": ["bot"],
