--- a/bot/__tests__/.eslintrc.yml
+++ b/bot/__tests__/.eslintrc.yml
@@ -1,2 +1,8 @@
+env:
+  jest: true
+extends:
+  - plugin:jest/all
 rules:
-  import/no-extraneous-dependencies: off
+  jest/prefer-expect-assertions: 0
+  jest/no-hooks: 0
+  jest/require-hook: 0
