--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "wiki-bot",
   "main": "dist/index.js",
   "scripts": {
-    "lint:test": "eslint ./**/*.ts ./bot/**/*.ts ./bot/*.ts ./send-email/**/*.mjs ./xmlbot/**/*.js --max-warnings 0",
+    "lint:test": "eslint './**/*.ts' './send-email/**/*.mjs' './xmlbot/**/*.js' --max-warnings 0",
     "type-check": "tsc --noEmit",
     "test": "jest --coverage",
     "build": "rm -rf dist && tsc --project tsconfig.build.json",
