--- a/testConfig/mocks/.eslintrc.yml
+++ b/testConfig/mocks/.eslintrc.yml
@@ -1,5 +1,8 @@
+env:
+  jest: true
 extends:
   - plugin:import/typescript
+  - plugin:jest/all
 parser: '@typescript-eslint/parser'
 parserOptions:
   project: './tsconfig.eslint.json'
@@ -7,3 +10,4 @@ plugins:
   - '@typescript-eslint'
 rules:
   "@typescript-eslint/no-unused-vars": error
+  import/no-extraneous-dependencies: off
