--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm ci
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -35,6 +35,7 @@ jobs:
       - name: Build code
         env:
           REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           CODE_BUCKET: ${{ secrets.CODE_BUCKET_NAME }}
           USER_NAME: ${{ secrets.WIKI_USER_NAME }}
           PASSWORD: ${{ secrets.WIKI_USER_PASSWORD }}
