--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "jest --coverage",
     "build": "rm -rf dist && tsc --project tsconfig.build.json",
     "update-env": "tsx --env-file=.env ./build/update-env.ts",
-    "docker-build": "docker buildx build --platform=linux/arm64 --provenance=false -t wiki-bot-playwright -f ./build/wiki-bot-playwright/Dockerfile .",
+    "docker-build": "sh ./build/wiki-bot-playwright/build.sh",
     "docker-run": "sh ./build/wiki-bot-playwright/run.sh",
-    "docker-test": "sh ./build/wiki-bot-playwright/test.sh",
+    "docker-test": "curl \"http://localhost:9000/2015-03-31/functions/function/invocations\" -d '{}'",
     "test:ci": "npm run type-check && npm test && npm run lint:test",
     "rollback": "tsx --env-file=.env bot/scripts/rollback.ts",
     "experiments": "tsx --env-file=.env bot/experiments/index.ts"
