--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
           lfs: true
 
       - name: Cache node modules
+        id: cache-node-modules
         uses: actions/cache@v4
         env:
           cache-name: cache-node-modules-v1
@@ -23,6 +24,7 @@ jobs:
           key: deploy-cache-node-modules-v1-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Configure AWS Credentials
