--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -29,9 +29,7 @@ jobs:
             ${{ runner.os }}-build-
 
       - name: Install modules
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: |
-          npm ci
+        run: npm ci
       - name: Install xmlbot modules
         run: |
           cd xmlbot
