--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,17 @@
 {
+    "preset": "ts-jest/presets/default-esm",
+    "extensionsToTreatAsEsm": [".ts"],
+    "transform": {
+      "^.+\\.ts$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
     "coveragePathIgnorePatterns": [
       "BaseWikiApi.ts",
       "WikiApi.ts",
