--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "NodeNext",
+        "module": "ES2022",
+        "moduleResolution": "bundler",
         "skipLibCheck": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
