--- a/xmlbot/package.json
+++ b/xmlbot/package.json
@@ -2,6 +2,7 @@
   "name": "xmlbot",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "start": "tsx --max-old-space-size=8192 --trace-gc index.ts ",
