--- a/xmlbot/package.json
+++ b/xmlbot/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "tsx --max-old-space-size=8192 --trace-gc index.ts ",
     "read": "tsx readLargeFile.ts",
-    "templates": "tsx templates.ts"
+    "templates": "tsx templates.ts",
+    "soldierAndPolice": "tsx soldierAndPolice.ts"
   },
   "keywords": [],
   "author": "",
